[gd_scene load_steps=4 format=4 uid="uid://bi730w50v2rxj"]

[ext_resource type="Script" uid="uid://ds6nly23tyipr" path="res://scenes/levels/SawmillYard/SawmillYard.gd" id="1_33rbk"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_3qy82"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_ga513"]

[node name="SawmillYard" type="Node2D"]
script = ExtResource("1_33rbk")

[node name="Ground" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD6//n/AAAAAAMAAAD6//r/AAAAAAMAAAD6//v/AAAAAAMAAAD6//z/AAAAAAMAAAD6//3/AAAAAAMAAAD6//7/AAAAAAMAAAD6////AAAAAAMAAAD6/wAAAAAAAAMAAAD6/wEAAAAAAAMAAAD6/wIAAAAAAAMAAAD6/wMAAAAAAAMAAAD6/wQAAAAAAAMAAAD6/wUAAAALAAAAAAD7//n/AAAAAAMAAAD7//r/AAAAAAMAAAD7//v/AAAAAAMAAAD7//z/AAAAAAMAAAD7//3/AAAAAAMAAAD7//7/AAAAAAMAAAD7////AAAAAAMAAAD7/wAAAAAAAAMAAAD7/wEAAAAAAAMAAAD7/wIAAAAAAAMAAAD7/wMAAAAAAAMAAAD7/wQAAAAAAAMAAAD7/wUAAAALAAAAAAD8//n/AAAAAAMAAAD8//r/AAAKAAAAAAD8//v/AAAKAAEAAAD8//z/AAAKAAEAAAD8//3/AAAKAAEAAAD8//7/AAAKAAEAAAD8////AAAKAAIAAAD8/wAAAAALAAAAAAD8/wEAAAAIAAQAAAD8/wIAAAALAAIAAAD8/wMAAAAAAAMAAAD8/wQAAAAAAAMAAAD8/wUAAAALAAAAAAD9//n/AAAAAAMAAAD9//r/AAANAAAAAAD9//v/AAAGAAQAAAD9//z/AAAHAAQAAAD9//3/AAALAAEAAAD9//7/AAALAAEAAAD9////AAALAAIAAAD9/wAAAAAMAAAAAAD9/wEAAAAMAAEAAAD9/wIAAAAMAAIAAAD9/wMAAAAAAAMAAAD9/wQAAAAAAAMAAAD9/wUAAAALAAAAAAD+//n/AAALAAEAAAD+//r/AAAJAAMAAAD+//v/AAAOAAEAAAD+//z/AAAMAAEAAAD+//3/AAAOAAAAAAD+//7/AAAJAAMAAAD+////AAANAAEAAAD+/wAAAAAKAAIAAAD+/wEAAAAKAAAAAAD+/wIAAAAKAAEAAAD+/wMAAAAKAAEAAAD+/wQAAAAKAAEAAAD+/wUAAAANAAAAAAD///n/AAAAAAMAAAD///r/AAAOAAAAAAD///v/AAALAAIAAAD///z/AAAAAAMAAAD///3/AAALAAAAAAD///7/AAALAAMAAAD/////AAALAAQAAAD//wAAAAALAAIAAAD//wEAAAALAAAAAAD//wIAAAAQAAMAAAD//wMAAAAQAAQAAAD//wQAAAAPAAAAAAD//wUAAAAPAAEAAAAAAPn/AAAAAAMAAAAAAPr/AAAMAAAAAAAAAPv/AAAMAAIAAAAAAPz/AAAAAAMAAAAAAP3/AAALAAAAAAAAAP7/AAAMAAMAAAAAAP//AAAMAAQAAAAAAAAAAAANAAEAAAAAAAEAAAANAAAAAAAAAAIAAAARAAMAAAAAAAMAAAARAAQAAAAAAAQAAAARAAAAAAAAAAUAAAARAAEAAAABAPn/AAAAAAMAAAABAPr/AAAAAAMAAAABAPv/AAAAAAMAAAABAPz/AAAKAAAAAAABAP3/AAANAAAAAAABAP7/AAALAAEAAAABAP//AAALAAEAAAABAAAAAAANAAMAAAABAAEAAAANAAQAAAABAAIAAAAPAAQAAAABAAMAAAAOAAEAAAABAAQAAAAMAAEAAAABAAUAAAAOAAAAAAACAPn/AAAAAAMAAAACAPr/AAAAAAMAAAACAPv/AAAAAAMAAAACAPz/AAALAAAAAAACAP3/AAAHAAMAAAACAP7/AAAPAAMAAAACAP//AAAIAAQAAAACAAAAAAAOAAMAAAACAAEAAAAOAAQAAAACAAIAAAAOAAEAAAACAAMAAAAMAAIAAAACAAQAAAAAAAMAAAACAAUAAAALAAAAAAADAPn/AAAAAAMAAAADAPr/AAAAAAMAAAADAPv/AAAAAAMAAAADAPz/AAALAAAAAAADAP3/AAAGAAMAAAADAP7/AAAOAAEAAAADAP//AAAOAAAAAAADAAAAAAAOAAEAAAADAAEAAAAMAAEAAAADAAIAAAAMAAIAAAADAAMAAAAAAAMAAAADAAQAAAAAAAMAAAADAAUAAAALAAAAAAAEAPn/AAAAAAMAAAAEAPr/AAAAAAMAAAAEAPv/AAAKAAAAAAAEAPz/AAANAAAAAAAEAP3/AAAIAAMAAAAEAP7/AAALAAIAAAAEAP//AAALAAAAAAAEAAAAAAALAAIAAAAEAAEAAAAAAAMAAAAEAAIAAAAAAAMAAAAEAAMAAAAAAAMAAAAEAAQAAAAAAAMAAAAEAAUAAAALAAAAAAAFAPn/AAAAAAMAAAAFAPr/AAAAAAMAAAAFAPv/AAAKAAAAAAAFAPz/AAAHAAQAAAAFAP3/AAAMAAEAAAAFAP7/AAAMAAIAAAAFAP//AAAMAAAAAAAFAAAAAAAMAAIAAAAFAAEAAAAAAAMAAAAFAAIAAAAAAAMAAAAGAPn/AAAAAAMAAAAGAPr/AAAAAAMAAAAGAPv/AAALAAAAAAAGAPz/AAAJAAQAAAAGAP3/AAALAAIAAAAGAP7/AAADAAAAAAAGAP//AAADAAEAAAAGAAAAAAAAAAIAAAAGAAEAAAAAAAMAAAAGAAIAAAAAAAMAAAAHAPn/AAAAAAMAAAAHAPr/AAAAAAMAAAAHAPv/AAALAAAAAAAHAPz/AAAKAAQAAAAHAP3/AAALAAIAAAAHAP7/AAAEAAAAAAAHAP//AAAAAAMAAAAHAAAAAAABAAIAAAAHAAEAAAAAAAMAAAAHAAIAAAAAAAMAAAD6/wYAAAAQAAAAAAD7/wYAAAAQAAAAAAD8/wYAAAAQAAAAAAD9/wYAAAAQAAAAAAD+/wYAAAAQAAAAAAD//wYAAAASAAAAAAAAAAYAAAATAAAAAAABAAYAAAAQAAAAAAACAAYAAAAQAAAAAAADAAYAAAAQAAAAAAAEAAYAAAAQAAAAAAAEAPj/AAABAA0AAAA=")
tile_set = ExtResource("2_3qy82")

[node name="Floor" type="TileMapLayer" parent="."]
z_index = 1
texture_filter = 1
tile_map_data = PackedByteArray("AAACAPn/AAAAAA4AAAAAAPn/AAAAAA4AAAD8//n/AAAAAA4AAAD6//n/AAAAAA4AAAD7//r/AAABAA8AAAD9//r/AAABAA8AAAD///r/AAABAA8AAAABAPr/AAABAA8AAAADAPr/AAAEABMAAAAEAPn/AAACAA4AAAD7//z/AAABAA8AAAD7////AAABAA8AAAD7/wIAAAABAA8AAAD8//7/AAACAA4AAAD8/wEAAAACAA4AAAD6/wMAAAABAA8AAAD6/wAAAAABAA8AAAD6//3/AAABAA8AAAD9/wMAAAAEABMAAAD8/wQAAAAEABIAAAADAPv/AAAEABIAAAABAPv/AAADABEAAAD///v/AAADABQAAAD+//v/AAAEABMAAAD8//z/AAAEABEAAAD8//3/AAADABMAAAAGAAIAAAAGABIAAAAEAAIAAAADABQAAAADAAQAAAADABEAAAADAAMAAAAEABMAAAADAAIAAAAEABIAAAAEAAEAAAADABIAAAAFAAEAAAAGABIAAAAGAAEAAAAFABEAAAD+/wMAAAADABQAAAD+/wQAAAADABIAAAD9/wIAAAAFABIAAAD8/wIAAAAGABIAAAD9/wAAAAAGABEAAAD9////AAADABIAAAD8//v/AAACAA4AAAA=")
tile_set = ExtResource("2_3qy82")

[node name="Walls" type="TileMapLayer" parent="."]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAD6/wUAAAAKAAkAAAD7/wUAAAAKAAgAAAD8/wUAAAAMAAYAAAD9/wUAAAANAAYAAAD+/wUAAAALAAgAAAABAAUAAAAJAAkAAAACAAUAAAAMAAYAAAADAAUAAAALAAgAAAD+/wEAAAADABAAAAD//wEAAAAEABAAAAD+/wAAAAADAA4AAAD//wAAAAAEAA4AAAAAAAEAAAAJAA4AAAD9/wEAAAAGAA0AAAD///7/AAAAAA8AAAABAP7/AAACAA8AAAABAP//AAACAA8AAAADAP3/AAAMAA4AAAD///v/AAARABAAAAAAAPv/AAASABAAAAABAPv/AAATABAAAAD///z/AAASAA4AAAACAPz/AAAMAA8AAAAEAPv/AAACAA0AAAAFAPv/AAABABwAAAAFAPr/AAABABsAAAAGAPv/AAAIABsAAAAGAPr/AAACABsAAAAHAPv/AAADABwAAAAHAPr/AAADABsAAAAFAPn/AAABABoAAAAGAPn/AAACABoAAAAHAPn/AAADABoAAAAGAP3/AAAPABAAAAAHAP3/AAAQABAAAAAGAP7/AAAPABIAAAAHAP7/AAAQABIAAAAFAP3/AAAIAAoAAAAFAP7/AAAIAAwAAAAGAP//AAAJAA0AAAAHAP//AAANAA0AAAACAP//AAAFABAAAAADAP//AAAFAA4AAAAEAP//AAAHAA4AAAADAPn/AAABAA0AAAABAPn/AAABAA0AAAD///n/AAABAA0AAAD9//n/AAABAA0AAAD7//n/AAABAA0AAAAEAPn/AAAOAAkAAAD8//n/AAAOAAkAAAAAAPn/AAAGAA0AAAACAPn/AAACAA4AAAD7//v/AAABAA0AAAD7//3/AAAOAAkAAAD7//7/AAABAA0AAAD7////AAAOAAkAAAD7/wAAAAAOAAkAAAD7/wEAAAABAA0AAAD7//r/AAAOAAkAAAD7/wIAAAAIAAYAAAD7/wMAAAAMAAcAAAD7/wQAAAAMAAgAAAD6/wIAAAABAA0AAAD6////AAABAA0AAAD6//r/AAABAA0AAAAEAPj/AAAAABMAAAAFAPf/AAABABgAAAAFAPj/AAABABkAAAAGAPf/AAACABgAAAAGAPj/AAACABkAAAAHAPf/AAADABgAAAAHAPj/AAADABkAAAADAAMAAAAMAAcAAAADAAQAAAAMAAgAAAADAAEAAAAJAAYAAAADAAIAAAAIAAcAAAAEAAEAAAAMAAYAAAAFAAEAAAANAAYAAAAGAAEAAAAMAAYAAAAHAAEAAAANAAYAAAD8////AAApAAcAAAD9//3/AAACAA8AAAD9//7/AAACAA8AAAABAPz/AAACAA8AAAD+//n/AAAIAAQAAAABAAQAAAAGABAAAAACAAQAAAACAA8AAAD+/wQAAAAIAAYAAAD6/wYAAAA/AAsAAAD7/wYAAAA/AAYAAAD8/wYAAAA/AAYAAAD9/wYAAAA/AAYAAAD+/wYAAAA/AAYAAAD//wYAAAA/AAYAAAAAAAYAAAA/AAYAAAABAAYAAAA/AAYAAAACAAYAAAA/AAYAAAADAAYAAAA/AAYAAAAEAAYAAAA/AAoAAAAHAAAAAAA/AAcAAAD6//z/AAABAA0AAAD7//z/AAAOAAkAAAA=")
tile_set = ExtResource("2_3qy82")

[node name="Trails" type="TileMapLayer" parent="."]
z_index = 3
texture_filter = 1
tile_map_data = PackedByteArray("AAD9/wAAAAAGABQAAAD8/wAAAAAGABMAAAD8/wEAAAAGABMAAAD8/wIAAAAFABQAAAD9/wIAAAAFABQAAAD+/wIAAAAFABQAAAA=")
tile_set = ExtResource("2_3qy82")

[node name="Items" type="TileMapLayer" parent="."]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_3qy82")

[node name="Demolitonist" parent="Items" instance=ExtResource("3_ga513")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="."]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD7/wYAAAA/AAYAAAD8/wYAAAA/AAYAAAD9/wYAAAA/AAYAAAD+/wYAAAA/AAYAAAD//wYAAAA/AAYAAAAAAAYAAAA/AAYAAAABAAYAAAA/AAYAAAACAAYAAAA/AAYAAAADAAYAAAA/AAYAAAD+/wAAAAADAA4AAAD//wAAAAAEAA4AAAAEAPn/AAAAABoAAAAEAPr/AAAAABsAAAAGAPr/AAAGAAoAAAAGAP3/AAARABEAAAAHAP3/AAASABEAAAAHAP7/AAASABIAAAADAPn/AAAAABMAAAD///n/AAAAABMAAAD9//n/AAAAABMAAAD7//n/AAAAABAAAAABAPn/AAAAABAAAAAEAPj/AAAAABkAAAACAPj/AAAAABAAAAD+//j/AAAAABAAAAD7//v/AAAAABAAAAD7//7/AAAAABAAAAD7/wEAAAAAABMAAAD6//r/AAAAABAAAAD6//z/AAAAABMAAAD6////AAAAABAAAAD6/wIAAAAAABMAAAD6/wMAAAA/AAUAAAD6/wQAAAA/AAUAAAD6/wUAAAA/AAUAAAAHAAAAAAA/AAcAAAAHAAEAAAA/AAcAAAAHAAIAAAA/AAoAAAD8//j/AAAAABMAAAAAAPj/AAAAABMAAAAEAPf/AAAAABgAAAAFAPf/AAABABgAAAAFAPj/AAABABkAAAAGAPf/AAACABgAAAAGAPj/AAACABkAAAAHAPf/AAADABgAAAAHAPj/AAADABkAAAAEAAIAAAA/AA0AAAAEAAMAAAA/AAcAAAAEAAQAAAA/AAcAAAAEAAUAAAA/AAcAAAAFAAIAAAA/AAYAAAAGAAIAAAA/AAYAAAA=")
tile_set = ExtResource("2_3qy82")

[node name="BadItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+//3/AAANABAAAAAAAP//AAANABAAAAAEAPz/AAANABAAAAA=")
tile_set = ExtResource("2_3qy82")

[node name="GoodItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAP//AAANABAAAAD+//3/AAANABAAAAAEAPz/AAANABAAAAA=")
tile_set = ExtResource("2_3qy82")

[node name="MovingItems" type="TileMapLayer" parent="."]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_set = ExtResource("2_3qy82")
